Fin de la présentation

--- a/slides/cod.tex
+++ b/slides/cod.tex
@@ -56,202 +56,11 @@ xcolor={dvipsnames,svgnames,table},10pt]{beamer}
 
 \input{exemple.tex}
 \subsection{Les algorithmes dérivés}
-
-\begin{frame}{Une question de choix}
-	Les algorithmes dérivés sont basés sur un choix plus judicieux des sommets actfis à traiter.
-	\vfill
-\end{frame}
-
-\begin{frame}{Une question de choix}
-	Les algorithmes dérivés sont basés sur un choix plus judicieux des sommets actfis à traiter.
-	\vfill
-	\textbf{L'algorithme FIFO :} dès qu'un noeud devient actif, on le place dans une file. On traite
-	alors les sommets de la file dans l'ordre \emph{First In First Out}\vfill
-\end{frame}
-
-\begin{frame}{Une question de choix}
-	Les algorithmes dérivés sont basés sur un choix plus judicieux des sommets actfis à traiter.
-	\vfill
-	\textbf{L'algorithme FIFO :} dès qu'un noeud devient actif, on le place dans une file. On traite
-	alors les sommets de la file dans l'ordre \emph{First In First Out}\vfill
-	\textbf{L'algorithme High Label :} on choisit de préférence, le noeud actif ayant la plus grande
-	distance au puits \vfill
-\end{frame}
-
-\begin{frame}{Complexités}
-	\renewcommand{\arraystretch}{2.5}
-	\begin{tabular}{c|p {0.12\linewidth}|p {0.35\linewidth}|p {0.35\linewidth}|} \cline{3-4}
-		\multicolumn{2}{c|}{}& Algorithme & Complexité \\ \cline{2-4}
-		&\multirow{2}{*}{$\quad$\rotatebox{90}{\parbox[b]{5.1em}{\centering Chaînes\\ améliorantes~}}} & Edmonds-Karp & $O(SA^2)$ \\
-		\cline{3-4}
-	\renewcommand{\arraystretch}{2}
-		& & Dinic & $O(S^2A)$ \\\cline{2-4}
-		&\multirow{3}{*}{$\quad$\rotatebox{90}{\parbox[t]{5.5em}{\centering Poussage\\ Réétiquetage}}} &
-		Générique & $O(S^2A)$ \\ \cline{3-4}
-		& & FIFO & $O(S^3)$ \\ \cline{3-4}
-		& & High Label & $O(S^2\sqrt{A})$ \\ \cline{2-4}
-	\end{tabular}
-\end{frame}
+\input{derive.tex}
 
 \section{Les tests}
 
-\subsection{Le programme}
-
-\begin{frame}{Générateur de graphe aléatoire}
-	\begin{itemize}
-		\item Deux états "relié" et "non relié"
-	\end{itemize}
-\end{frame}
-
-\begin{frame}{Générateur de graphe aléatoire}
-	\begin{itemize}
-		\item Deux états "relié" et "non relié"
-		\item Initialise tous les noeuds sauf la source à "non relié"
-	\end{itemize}
-\end{frame}
-
-\begin{frame}{Générateur de graphe aléatoire}
-	\begin{itemize}
-		\item Deux états "relié" et "non relié"
-		\item Initialise tous les noeuds sauf la source à "non relié"
-		\item Construit un arbre
-	\end{itemize}
-\end{frame}
-
-\begin{frame}{Générateur de graphe aléatoire}
-	\begin{itemize}
-		\item Deux états "relié" et "non relié"
-		\item Initialise tous les noeuds sauf la source à "non relié"
-		\item Construit un arbre
-		\item Calcule le nombre de voisins (loi de Poisson)
-	\end{itemize}
-\end{frame}
-
-\begin{frame}{Générateur de graphe aléatoire}
-	\begin{itemize}
-		\item Deux états "relié" et "non relié"
-		\item Initialise tous les noeuds sauf la source à "non relié"
-		\item Construit un arbre
-		\item Calcule le nombre de voisins (loi de Poisson)
-		\item Relie les points aléatoirement
-	\end{itemize}
-\end{frame}
-
-\subsection{Modus Operandi}
-
-\begin{frame}{Les tests}
-	\begin{itemize}
-		\item Définit un ratio : $r = \frac{m}{n}$
-	\end{itemize}
-\end{frame}
-
-\begin{frame}{Les tests}
-	\begin{itemize}
-		\item Définit un ratio : $r = \frac{m}{n}$
-		\item Fait varier le nombre de noeuds
-	\end{itemize}
-\end{frame}
-\begin{frame}{Les tests}
-	\begin{itemize}
-		\item Définit un ratio : $r = \frac{m}{n}$
-		\item Fait varier le nombre de noeuds
-		\item Réalise les trois algorithmes sur 100 graphes aléatoires différents
-	\end{itemize}
-\end{frame}
-\begin{frame}{Les tests}
-	\begin{itemize}
-		\item Définit un ratio : $r = \frac{m}{n}$
-		\item Fait varier le nombre de noeuds
-		\item Réalise les trois algorithmes sur 100 graphes aléatoires différents
-		\item Trace les courbes
-	\end{itemize}
-\end{frame}
-
-\subsection{Retour d'expériences}
-
-\begin{frame}{Les résultats attendus}
-	Pour un ratio de $n$ : 
-\end{frame}
-
-\begin{frame}{Les résultats attendus}
-	Pour un ratio de $n$ : \begin{itemize}
-		\item Une complexité en $O(n^4)$ pour Dinic
-	\end{itemize}
-\end{frame}
-
-\begin{frame}{Les résultats attendus}
-	Pour un ratio de $n$ : \begin{itemize}
-		\item Une complexité en $O(n^4)$ pour Dinic
-		\item Une complexité en $O(n^3)$ pour les algorithmes FIFO et High Label
-	\end{itemize}
-\end{frame}
-
-\begin{frame}{Les résultats attendus}
-	Pour un ratio de $n$ : \begin{itemize}
-		\item Une complexité en $O(n^4)$ pour Dinic
-		\item Une complexité en $O(n^3)$ pour les algorithmes FIFO et High Label
-		\item Une exécution plus rapide pour FIFO et High Label
-	\end{itemize}
-\end{frame}
-
-\begin{frame}{Les résultats obtenus}
-	\begin{minipage}[c]{0.50\linewidth}
-		\includegraphics[scale=0.3]{img/resultat.png}
-	\end{minipage}\hfill
-	\begin{minipage}[c]{0.40\linewidth}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{Les résultats obtenus}
-	\begin{minipage}[c]{0.50\linewidth}
-		\includegraphics[scale=0.3]{img/resultat.png}
-	\end{minipage}\hfill
-	\begin{minipage}[c]{0.40\linewidth}
-		\begin{itemize}
-			\item $O(n^4)$ pour tous les algorithmes
-		\end{itemize}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{Les résultats obtenus}
-	\begin{minipage}[c]{0.50\linewidth}
-		\includegraphics[scale=0.3]{img/resultat.png}
-	\end{minipage}\hfill
-	\begin{minipage}[c]{0.40\linewidth}
-		\begin{itemize}
-			\item $O(n^4)$ pour tous les algorithmes
-			\item Dinic plus rapide
-		\end{itemize}
-	\end{minipage}
-\end{frame}
-
-\begin{frame}{Analyse des résultats}
-	Les causes plausibles de ce résultats sont :
-\end{frame}
-
-\begin{frame}{Analyse des résultats}
-	Les causes plausibles de ce résultats sont :
-	\begin{itemize}
-		\item Erreur d'appréhension du réseau résiduel
-	\end{itemize}
-\end{frame}
-
-\begin{frame}{Analyse des résultats}
-	Les causes plausibles de ce résultats sont :
-	\begin{itemize}
-		\item Erreur d'appréhension du réseau résiduel
-		\item Erreur d'implémentation
-	\end{itemize}
-\end{frame}
-
-\begin{frame}{Analyse des résultats}
-	Les causes plausibles de ce résultats sont :
-	\begin{itemize}
-		\item Erreur d'appréhension du réseau résiduel
-		\item Erreur d'implémentation
-		\item Pré-traitement très long
-	\end{itemize}
-\end{frame}
+\input{test.tex}
 
 \section{Conclusion}
 
