--- a/slides/exemple.tex
+++ b/slides/exemple.tex
@@ -54,7 +54,7 @@
 			\draw[fleche] (s2) to node[above  left] {$1$} (b2);
 			\draw[fleche] (a2) to node[      right] {$3$} (c2);
 			\draw[fleche] (b2) to node[       left] {$1$} (d2);
-			\draw[fleche] (c2) to node[below right] {$4$} (t2);
+			\draw[fleche] (c2) to node[below right] {$2$} (t2);
 			\draw[fleche] (d2) to node[below  left] {$1$} (t2);
 
 		\end{tikzpicture}
@@ -73,7 +73,7 @@
 	\end{minipage}
 \end{frame}
 
-\begin{frame}{Phase 1}
+\begin{frame}{Phase 1 - Poussage}
 	\begin{minipage}[c]{0.6\linewidth}
 		\begin{tikzpicture}[scale=0.55]
 			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
@@ -92,7 +92,7 @@
 
 			\draw[fleche] (a2) to node[      right] {$3$} (c2);
 			\draw[fleche] (b2) to node[       left] {$1$} (d2);
-			\draw[fleche] (c2) to node[below right] {$4$} (t2);
+			\draw[fleche] (c2) to node[below right] {$2$} (t2);
 			\draw[fleche] (d2) to node[below  left] {$1$} (t2);
 
 		\end{tikzpicture}
@@ -111,7 +111,7 @@
 	\end{minipage}
 \end{frame}
 
-\begin{frame}{Phase 1}
+\begin{frame}{Phase 1 - Poussage}
 	\begin{minipage}[c]{0.6\linewidth}
 		\begin{tikzpicture}[scale=0.55]
 			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
@@ -128,7 +128,7 @@
 			\draw[fleche] (d1) to node[below      ] {$0/2$} (c1);
 			\draw[fleche] (d1) to node[below  left] {$0/1$} (t1);
 
-			\draw[fleche] (c2) to node[below right] {$4$} (t2);
+			\draw[fleche] (c2) to node[below right] {$2$} (t2);
 			\draw[fleche] (d2) to node[below  left] {$1$} (t2);
 
 		\end{tikzpicture}
@@ -143,6 +143,250 @@
 			c &  \textcolor{green}{3} & 1 \\ \hline
 			d &  \textcolor{green}{1} & 1 \\ \hline
 			t &  0 & 0 \\ \hline
+		\end{tabular}
+	\end{minipage}
+\end{frame}
+
+\begin{frame}{Phase 1 - Poussage}
+	\begin{minipage}[c]{0.6\linewidth}
+		\begin{tikzpicture}[scale=0.55]
+			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
+
+			\input{noeuds.tex}
+
+			\draw[fleche, red] (s1) to node[above right, red] {$5/5$} (a1);
+			\draw[fleche, red] (s1) to node[above  left, red] {$1/1$} (b1);
+			\draw[fleche] (a1) to node[above      ] {$0/1$} (b1);
+			\draw[fleche, red] (a1) to node[      right, red] {$3/3$} (c1);
+			\draw[fleche, red] (b1) to node[       left, red] {$1/1$} (d1);
+			\draw[fleche] (c1) to node[above right] {$0/1$} (b1);
+			\draw[fleche, red] (c1) to node[below right, red] {$2/2$} (t1);
+			\draw[fleche] (d1) to node[below      ] {$0/2$} (c1);
+			\draw[fleche, red] (d1) to node[below  left, red] {$1/1$} (t1);
+
+		\end{tikzpicture}
+	\end{minipage}\hfill
+	\begin{minipage}[c]{0.3\linewidth}
+		\begin{tabular}{|c|c|c|}
+			\hline
+			$i$ & $e(i)$ & $d(i)$ \\ \hline
+			s & $\infty$ & 6* \\ \hline
+			a &  \textcolor{orange}{2} & 2 \\ \hline
+			b &  0 & 2 \\ \hline
+			c &  \textcolor{orange}{1} & 1 \\ \hline
+			d &  \textcolor{orange}{0} & 1 \\ \hline
+			t &  \textcolor{green}{3} & 0 \\ \hline
+		\end{tabular}
+	\end{minipage}
+\end{frame}
+
+\begin{frame}{Phase 1 - Réétiquettage}
+	\begin{minipage}[c]{0.6\linewidth}
+		\begin{tikzpicture}[scale=0.55]
+			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
+
+			\input{noeuds.tex}
+
+			\draw[fleche, red] (s1) to node[above right, red] {$5/5$} (a1);
+			\draw[fleche, red] (s1) to node[above  left, red] {$1/1$} (b1);
+			\draw[fleche] (a1) to node[above      ] {$0/1$} (b1);
+			\draw[fleche, red] (a1) to node[      right, red] {$3/3$} (c1);
+			\draw[fleche, red] (b1) to node[       left, red] {$1/1$} (d1);
+			\draw[fleche] (c1) to node[above right] {$0/1$} (b1);
+			\draw[fleche, red] (c1) to node[below right, red] {$2/2$} (t1);
+			\draw[fleche] (d1) to node[below      ] {$0/2$} (c1);
+			\draw[fleche, red] (d1) to node[below  left, red] {$1/1$} (t1);
+
+		\end{tikzpicture}
+	\end{minipage}\hfill
+	\begin{minipage}[c]{0.3\linewidth}
+		\begin{tabular}{|c|c|c|}
+			\hline
+			$i$ & $e(i)$ & $d(i)$ \\ \hline
+			s & $\infty$ & 6* \\ \hline
+			a &  \textcolor{orange}{2} & 2 \\ \hline
+			b &  0 & 2 \\ \hline
+			\textcolor{blue}{c} &  \textcolor{orange}{1} & \textcolor{blue}{2} \\ \hline
+			d &  0 & 1 \\ \hline
+			t &  \textcolor{green}{3} & 0 \\ \hline
+		\end{tabular}
+	\end{minipage}
+\end{frame}
+
+\begin{frame}{Phase 1 - Réétiquettage}
+	\begin{minipage}[c]{0.6\linewidth}
+		\begin{tikzpicture}[scale=0.55]
+			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
+
+			\input{noeuds.tex}
+
+			\draw[fleche, red] (s1) to node[above right, red] {$5/5$} (a1);
+			\draw[fleche, red] (s1) to node[above  left, red] {$1/1$} (b1);
+			\draw[fleche] (a1) to node[above      ] {$0/1$} (b1);
+			\draw[fleche, red] (a1) to node[      right, red] {$3/3$} (c1);
+			\draw[fleche, red] (b1) to node[       left, red] {$1/1$} (d1);
+			\draw[fleche] (c1) to node[above right] {$0/1$} (b1);
+			\draw[fleche, red] (c1) to node[below right, red] {$2/2$} (t1);
+			\draw[fleche] (d1) to node[below      ] {$0/2$} (c1);
+			\draw[fleche, red] (d1) to node[below  left, red] {$1/1$} (t1);
+
+			\draw[fleche] (c2) to node[below right] {$1$} (b2);
+			\draw[fleche] (c2) to node[      right] {$3$} (a2);
+
+		\end{tikzpicture}
+	\end{minipage}\hfill
+	\begin{minipage}[c]{0.3\linewidth}
+		\begin{tabular}{|c|c|c|}
+			\hline
+			$i$ & $e(i)$ & $d(i)$ \\ \hline
+			s & $\infty$ & 6* \\ \hline
+			a &  \textcolor{orange}{2} & 2 \\ \hline
+			b &  0 & 2 \\ \hline
+			\textcolor{blue}{c} &  \textcolor{orange}{1} & \textcolor{blue}{2} \\ \hline
+			d &  0 & 1 \\ \hline
+			t &  \textcolor{green}{3} & 0 \\ \hline
+		\end{tabular}
+	\end{minipage}
+\end{frame}
+
+\begin{frame}{Phase 2 - Poussage}
+	\begin{minipage}[c]{0.6\linewidth}
+		\begin{tikzpicture}[scale=0.55]
+			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
+
+			\input{noeuds.tex}
+
+			\draw[fleche, red] (s1) to node[above right, red] {$5/5$} (a1);
+			\draw[fleche, red] (s1) to node[above  left, red] {$1/1$} (b1);
+			\draw[fleche] (a1) to node[above      ] {$0/1$} (b1);
+			\draw[fleche, red] (a1) to node[      right, red] {$3/3$} (c1);
+			\draw[fleche, red] (b1) to node[       left, red] {$1/1$} (d1);
+			\draw[fleche, red] (c1) to node[above right] {$1/1$} (b1);
+			\draw[fleche, red] (c1) to node[below right, red] {$2/2$} (t1);
+			\draw[fleche] (d1) to node[below      ] {$0/2$} (c1);
+			\draw[fleche, red] (d1) to node[below  left, red] {$1/1$} (t1);
+
+			\draw[fleche] (c2) to node[      right] {$3$} (a2);
+
+		\end{tikzpicture}
+	\end{minipage}\hfill
+	\begin{minipage}[c]{0.3\linewidth}
+		\begin{tabular}{|c|c|c|}
+			\hline
+			$i$ & $e(i)$ & $d(i)$ \\ \hline
+			s & $\infty$ & 6* \\ \hline
+			a &  \textcolor{orange}{2} & 2 \\ \hline
+			b &  \textcolor{green}{1} & 2 \\ \hline
+			c &  0 & 2 \\ \hline
+			d &  0 & 1 \\ \hline
+			t &  \textcolor{green}{3} & 0 \\ \hline
+		\end{tabular}
+	\end{minipage}
+\end{frame}
+
+\begin{frame}{Phase 2 - Réétiquettage}
+	\begin{minipage}[c]{0.6\linewidth}
+		\begin{tikzpicture}[scale=0.55]
+			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
+
+			\input{noeuds.tex}
+
+			\draw[fleche, red] (s1) to node[above right, red] {$5/5$} (a1);
+			\draw[fleche, red] (s1) to node[above  left, red] {$1/1$} (b1);
+			\draw[fleche] (a1) to node[above      ] {$0/1$} (b1);
+			\draw[fleche, red] (a1) to node[      right, red] {$3/3$} (c1);
+			\draw[fleche, red] (b1) to node[       left, red] {$1/1$} (d1);
+			\draw[fleche, red] (c1) to node[above right] {$1/1$} (b1);
+			\draw[fleche, red] (c1) to node[below right, red] {$2/2$} (t1);
+			\draw[fleche] (d1) to node[below      ] {$0/2$} (c1);
+			\draw[fleche, red] (d1) to node[below  left, red] {$1/1$} (t1);
+
+			\draw[fleche] (c2) to node[      right] {$3$} (a2);
+
+		\end{tikzpicture}
+	\end{minipage}\hfill
+	\begin{minipage}[c]{0.3\linewidth}
+		\begin{tabular}{|c|c|c|}
+			\hline
+			$i$ & $e(i)$ & $d(i)$ \\ \hline
+			s & $\infty$ & 6* \\ \hline
+			a &  \textcolor{orange}{2} & 2 \\ \hline
+			\textcolor{blue}{b} &  \textcolor{orange}{1} & \textcolor{blue}{7} \\ \hline
+			c &  0 & 2 \\ \hline
+			d &  0 & 1 \\ \hline
+			t &  \textcolor{green}{3} & 0 \\ \hline
+		\end{tabular}
+	\end{minipage}
+\end{frame}
+
+\begin{frame}{Phase 2 - Réétiquettage}
+	\begin{minipage}[c]{0.6\linewidth}
+		\begin{tikzpicture}[scale=0.55]
+			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
+
+			\input{noeuds.tex}
+
+			\draw[fleche, red] (s1) to node[above right, red] {$5/5$} (a1);
+			\draw[fleche, red] (s1) to node[above  left, red] {$1/1$} (b1);
+			\draw[fleche] (a1) to node[above      ] {$0/1$} (b1);
+			\draw[fleche, red] (a1) to node[      right, red] {$3/3$} (c1);
+			\draw[fleche, red] (b1) to node[       left, red] {$1/1$} (d1);
+			\draw[fleche, red] (c1) to node[above right] {$1/1$} (b1);
+			\draw[fleche, red] (c1) to node[below right, red] {$2/2$} (t1);
+			\draw[fleche] (d1) to node[below      ] {$0/2$} (c1);
+			\draw[fleche, red] (d1) to node[below  left, red] {$1/1$} (t1);
+
+			\draw[fleche] (c2) to node[      right] {$3$} (a2);
+			\draw[fleche] (b2) to node[above  left] {$1$} (s2);
+
+		\end{tikzpicture}
+	\end{minipage}\hfill
+	\begin{minipage}[c]{0.3\linewidth}
+		\begin{tabular}{|c|c|c|}
+			\hline
+			$i$ & $e(i)$ & $d(i)$ \\ \hline
+			s & $\infty$ & 6* \\ \hline
+			a &  \textcolor{orange}{2} & 2 \\ \hline
+			\textcolor{blue}{b} &  \textcolor{orange}{1} & \textcolor{blue}{7} \\ \hline
+			c &  0 & 2 \\ \hline
+			d &  0 & 1 \\ \hline
+			t &  \textcolor{green}{3} & 0 \\ \hline
+		\end{tabular}
+	\end{minipage}
+\end{frame}
+
+\begin{frame}{Phase 3 - Poussage}
+	\begin{minipage}[c]{0.6\linewidth}
+		\begin{tikzpicture}[scale=0.55]
+			\tikzset{noeud/.style={circle, draw=black, inner sep=0.1cm, minimum width=0.6cm}, fleche/.style={>=latex, ->}};
+
+			\input{noeuds.tex}
+
+			\draw[fleche, red] (s1) to node[above right, red] {$5/5$} (a1);
+			\draw[fleche] (s1) to node[above  left] {$0/1$} (b1);
+			\draw[fleche] (a1) to node[above      ] {$0/1$} (b1);
+			\draw[fleche, red] (a1) to node[      right, red] {$3/3$} (c1);
+			\draw[fleche, red] (b1) to node[       left, red] {$1/1$} (d1);
+			\draw[fleche, red] (c1) to node[above right] {$1/1$} (b1);
+			\draw[fleche, red] (c1) to node[below right, red] {$2/2$} (t1);
+			\draw[fleche] (d1) to node[below      ] {$0/2$} (c1);
+			\draw[fleche, red] (d1) to node[below  left, red] {$1/1$} (t1);
+
+			\draw[fleche] (c2) to node[      right] {$3$} (a2);
+			\draw[fleche] (b2) to node[above  left] {$1$} (s2);
+
+		\end{tikzpicture}
+	\end{minipage}\hfill
+	\begin{minipage}[c]{0.3\linewidth}
+		\begin{tabular}{|c|c|c|}
+			\hline
+			$i$ & $e(i)$ & $d(i)$ \\ \hline
+			s & $\infty$ & 6* \\ \hline
+			a &  \textcolor{orange}{2} & 2 \\ \hline
+			b &  0 & \textcolor{blue}{7} \\ \hline
+			c &  0 & 2 \\ \hline
+			d &  0 & 1 \\ \hline
+			t &  \textcolor{green}{3} & 0 \\ \hline
 		\end{tabular}
 	\end{minipage}
 \end{frame}
