--- a/slides/preflots.tex
+++ b/slides/preflots.tex
@@ -282,12 +282,12 @@
 
 				\draw[fleche, red] (s) -- node[above left, red] {$2/2$}(a);
 				\draw[fleche] (s) -- node[below left] {$0/1$}(b);
-				\draw[fleche, red] (a) -- node[left,red] {$1/1$}(b);
+				\draw[fleche] (a) -- node[left] {$0/1$}(b);
 				\draw[fleche, red] (a) -- node[above, red] {$1/3$}(d);
 				\draw[fleche] (d) -- node[above left] {$0/1$}(b);
-				\draw[fleche, red] (b) -- node[below, red] {$1/1$}(c);
+				\draw[fleche] (b) -- node[below] {$0/1$}(c);
 				\draw[fleche, red] (d) -- node[above right, red] {$1/4$}(t);
-				\draw[fleche, red] (c) -- node[below right, red] {$1/1$}(t);
+				\draw[fleche] (c) -- node[below right] {$0/1$}(t);
 				\draw[fleche] (c) -- node[right] {$0/2$}(d);
 			\end{tikzpicture}
 			\caption{Un exemple de flot}
